--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "npm": "5.0.3"
   },
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
