--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "0.15.3",
+    "lodash": "4.17.4",
+    "material-ui": "^0.17.1",
+    "moment": "^2.18.1",
+    "moment-timezone": "^0.5.13",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
+    "react-big-calendar": "^0.17.0",
+    "react-bootstrap": "^0.32.0",
+    "react-color": "^2.13.8",
+    "react-datetime": "^2.11.1",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "^1.0.17",
+    "react-tap-event-plugin": "^3.0.2",
+    "redux": "^3.7.2",
+    "redux-axios-middleware": "^4.0.0",
+    "redux-form": "^7.2.0",
+    "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.0",
+    "validate.js": "^0.11.1"
+  },
+  "devDependencies": {
+    "node-sass": "^4.7.2",
+    "npm-run-all": "4.0.2"
   },
   "scripts": {
+    "build-css": "node-sass src/ -o src/",
+    "watch-css": "npm run build-css && node-sass src/ -o src/ --watch --recursive",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
