--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
   },
   "scripts": {
     "start": "node index.js",
+    "server": "nodemon index.js",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^3.5.1",
+    "cookie-session": "^1.3.2",
     "express": "^4.16.2",
-    "twilio": "^3.8.0"
+    "mongoose": "^4.13.9",
+    "twilio": "^3.11.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.1"
   }
 }
