--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "concurrently": "^3.5.1",
     "cookie-session": "^1.3.2",
     "express": "^4.16.2",
+    "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.13.9",
     "twilio": "^3.11.0"
   },
