--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^1.0.3",
     "concurrently": "^3.5.1",
     "cookie-session": "^1.3.2",
+    "cron": "^1.3.0",
     "express": "^4.16.2",
     "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.13.9",
