--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "0.15.3",
+    "date-fns": "^2.6.0",
     "lodash": "4.17.4",
     "material-ui": "^0.17.1",
     "moment": "^2.18.1",
