--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "concurrently": "^3.5.1",
     "cookie-session": "^1.3.2",
     "date-fns": "^2.6.0",
+    "date-fns-tz": "1.1.6",
     "express": "^4.16.2",
     "jsonwebtoken": "^7.3.0",
     "mongodb": "3.6.3",
